[gd_scene load_steps=19 format=2]

[ext_resource path="res://Tower/tower1.png" type="Texture" id=1]
[ext_resource path="res://LightShadow_pipo.png" type="Texture" id=2]
[ext_resource path="res://Tower/Tower.gd" type="Script" id=3]
[ext_resource path="res://UI/HP_Bar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Tower/burning_end_2.png" type="Texture" id=5]
[ext_resource path="res://Tower/burning_start_1.png" type="Texture" id=6]
[ext_resource path="res://Tower/burning_loop_1.png" type="Texture" id=7]
[ext_resource path="res://Tower/burning_start_2.png" type="Texture" id=8]
[ext_resource path="res://Tower/burning_loop_2.png" type="Texture" id=9]
[ext_resource path="res://Tower/burning_end_1.png" type="Texture" id=10]

[sub_resource type="TileSet" id=1]
0/name = "LightShadow_pipo.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 64, 32, 32 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "LightShadow_pipo.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 32, 32, 32 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 16, 8 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "LightShadow_pipo.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "LightShadow_pipo.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 224, 112, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "LightShadow_pipo.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 96, 32, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.5916, 37.6017 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 82.6101, 5.70607 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.61856, 22.9491 )

[sub_resource type="Animation" id=5]
resource_name = "aman"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("tower1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fire/end:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("fire/loop:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("fire/start:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "bakar"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("tower1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fire/start:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("fire/loop:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("fire/end:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "siram"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("tower1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fire/end:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("fire/loop:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("fire/start:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("tower1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fire/loop/burning_loop_1:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("fire/loop/burning_loop_3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("fire/loop/burning_loop_2:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("fire/loop/burning_loop_4:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("fire/loop/burning_loop_5:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("fire/start:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("fire/loop:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("fire/end:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Tower" type="KinematicBody2D" groups=[
"tower",
]]
collision_layer = 16
collision_mask = 46
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 3.06181, 3.94755 )
scale = Vector2( 1, 1.5 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -131071, 2, 0, -131070, 2, 0, -131069, 3, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 1, 65534, 4, 0, 0, 4, 0, 2, 0, 65536, 3, 0, 65537 )

[node name="tower1" type="Sprite" parent="."]
position = Vector2( 1.25993, -60.8 )
texture = ExtResource( 1 )
hframes = 2

[node name="fire" type="Node2D" parent="."]

[node name="end" type="Node2D" parent="fire"]
visible = false

[node name="burning_end_1" type="Sprite" parent="fire/end"]
position = Vector2( -42.75, -0.637653 )
scale = Vector2( 2.446, 1.798 )
texture = ExtResource( 10 )
hframes = 5

[node name="burning_end_3" type="Sprite" parent="fire/end"]
position = Vector2( 29.9898, -0.439465 )
scale = Vector2( 2.838, 1.798 )
texture = ExtResource( 10 )
hframes = 5

[node name="burning_end_2" type="Sprite" parent="fire/end"]
position = Vector2( -29.3262, -23.3447 )
scale = Vector2( 1.29951, 1.35126 )
texture = ExtResource( 5 )
hframes = 5

[node name="burning_end_4" type="Sprite" parent="fire/end"]
position = Vector2( 16.3521, -42.8476 )
scale = Vector2( 2.446, 1.798 )
texture = ExtResource( 10 )
hframes = 5

[node name="burning_end_5" type="Sprite" parent="fire/end"]
position = Vector2( -6.45239, -0.439449 )
scale = Vector2( 2.446, 1.798 )
texture = ExtResource( 10 )
hframes = 5

[node name="loop" type="Node2D" parent="fire"]
visible = false

[node name="burning_loop_1" type="Sprite" parent="fire/loop"]
position = Vector2( -30.5077, -0.302105 )
scale = Vector2( 2.44582, 1.79835 )
texture = ExtResource( 7 )
hframes = 8

[node name="burning_loop_3" type="Sprite" parent="fire/loop"]
position = Vector2( 21.0536, -0.302341 )
scale = Vector2( 2.838, 1.79835 )
texture = ExtResource( 7 )
hframes = 8

[node name="burning_loop_2" type="Sprite" parent="fire/loop"]
position = Vector2( -29.8161, -23.5393 )
scale = Vector2( 1.3, 1.351 )
texture = ExtResource( 9 )
hframes = 8

[node name="burning_loop_4" type="Sprite" parent="fire/loop"]
position = Vector2( 16.5827, -43.1073 )
scale = Vector2( 2.44582, 1.79835 )
texture = ExtResource( 7 )
hframes = 8

[node name="burning_loop_5" type="Sprite" parent="fire/loop"]
position = Vector2( -6.22181, -0.302313 )
scale = Vector2( 2.44582, 1.79835 )
texture = ExtResource( 7 )
hframes = 8

[node name="start" type="Node2D" parent="fire"]
visible = false

[node name="burning_start_1" type="Sprite" parent="fire/start"]
position = Vector2( -44.1352, -0.948032 )
scale = Vector2( 2.446, 1.798 )
texture = ExtResource( 6 )
hframes = 4

[node name="burning_start_3" type="Sprite" parent="fire/start"]
position = Vector2( 28.6047, -0.749851 )
scale = Vector2( 2.838, 1.798 )
texture = ExtResource( 6 )
hframes = 4

[node name="burning_start_2" type="Sprite" parent="fire/start"]
position = Vector2( -29.573, -23.0492 )
scale = Vector2( 1.3, 1.351 )
texture = ExtResource( 8 )
hframes = 4
frame = 1

[node name="burning_start_4" type="Sprite" parent="fire/start"]
position = Vector2( 14.9669, -43.158 )
scale = Vector2( 2.446, 1.798 )
texture = ExtResource( 6 )
hframes = 4

[node name="burning_start_5" type="Sprite" parent="fire/start"]
position = Vector2( -7.83752, -0.749828 )
scale = Vector2( 2.446, 1.798 )
texture = ExtResource( 6 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"tower",
]]
rotation = 1.5708
shape = SubResource( 2 )

[node name="H_area" type="Area2D" parent="."]
position = Vector2( 0, 14.6954 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="H_area"]
shape = SubResource( 3 )

[node name="V_area" type="Area2D" parent="."]
position = Vector2( 0, 12.314 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="V_area"]
position = Vector2( 0, 22.4982 )
shape = SubResource( 4 )

[node name="HP_Bar" parent="." instance=ExtResource( 4 )]
margin_left = -60.2155
margin_top = -56.9131
margin_right = 213.784
margin_bottom = -16.9131
rect_scale = Vector2( 0.417906, 0.417906 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/aman = SubResource( 5 )
anims/bakar = SubResource( 6 )
anims/siram = SubResource( 7 )
anims/terbakar = SubResource( 8 )

[connection signal="tower_hit" from="." to="." method="_on_Tower_tower_hit"]
[connection signal="body_entered" from="H_area" to="." method="_on_refill_area_body_entered"]
[connection signal="body_exited" from="H_area" to="." method="_on_refill_area_body_exited"]
[connection signal="body_entered" from="V_area" to="." method="_on_refill_area_body_entered"]
[connection signal="body_exited" from="V_area" to="." method="_on_refill_area_body_exited"]
